[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm_agent_ads"
version = "0.0.1"
description = "agente de marketing que usa informacion de big query para responder preguntas de negoci"
authors = [
  { name = "Laura Orozco" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["llm_agent_ads"]
force_sort_within_sections = true


